# chesterfield

./: .travis.yml  Cargo.toml  README.md  README.tpl
couchdb-container/: Cargo.toml
couchdb-container/src/: lib.rs
examples/sync/: docker.rs  main.rs
src/: client.rs  container.rs  database.rs  document.rs  error.rs  inner_client.rs  lib.rs  traits.rs
src/database/: delete.rs  get.rs  insert.rs  replicate.rs  replication.rs  update.rs
tests/: create.rs
