[package]
name = "chesterfield"
description = "Ergonomic, strongly-typed CouchDB client in pure Rust."
version = "0.0.0"
homepage = "https://github.com/danieleades/chesterfield"
readme = "README.md"
keywords = ["couchdb", "nosql", "database", "pouchdb", "couchbase"]
categories = ["api-bindings", "asynchronous", "database", "database-implementations"]
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danieleades/chesterfield" }
maintenance = { status="actively-developed" }

[dependencies]
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
reqwest = "0.9.17"
tokio = "0.1.20"

[build-dependencies]
cargo-readme = "3.1.2"

[dev-dependencies]
shiplift = "0.5.0"
