[package]
name = "chesterfield"
description = "Ergonomic, strongly-typed CouchDB client in pure Rust."
version = "0.0.2"
homepage = "https://github.com/danieleades/chesterfield"
readme = "README.md"
keywords = ["couchdb", "nosql", "database", "pouchdb", "couchbase"]
categories = ["api-bindings", "asynchronous", "database", "database-implementations"]
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danieleades/chesterfield" }
maintenance = { status="actively-developed" }

[dependencies]
serde = { version = "1.0.98", features = ["derive"] }
serde_json = "1.0.40"
reqwest = { version = "0.9.19", features = ["rustls-tls"] }
log = "0.4.8"
futures-preview = { version = "0.3.0-alpha.14", features = ["compat"] }

[dev-dependencies]
couchdb-container = {version = "0.2.0", path = "couchdb-container" }
tokio = "0.1.22"
