[package]
name = "chesterfield"
description = "Ergonomic, strongly-typed CouchDB client in pure Rust."
version = "0.0.2"
homepage = "https://github.com/danieleades/chesterfield"
readme = "README.md"
keywords = ["couchdb", "nosql", "database", "pouchdb", "couchbase"]
categories = ["api-bindings", "asynchronous", "database", "database-implementations"]
authors = ["Daniel Eades <danieleades@hotmail.com>"]
edition = "2018"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "danieleades/chesterfield" }
maintenance = { status="actively-developed" }

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10.4", features = ["rustls-tls", "json"] }
log = "0.4.8"
url = "2.1.1"

[dev-dependencies]
couchdb-container = {version = "0.2.0", path = "couchdb-container" }
tokio = { version = "0.2.20", features = ["macros", "rt-threaded"] }
